Refs #140518 - Fix page document padding on small screen.

--- a/src/SearchBlock/less/styles.less
+++ b/src/SearchBlock/less/styles.less
@@ -1258,6 +1258,7 @@ div#page-document {
 @media screen and (max-width: 600px) {
   .ui.basic.segment.content-area .ui.container#page-document {
     margin-top: 0.5em !important;
+    padding: 0px !important;
   }
 
   div.col-left,
